--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
@@ -35,7 +35,7 @@
   <string name="abc_activitychooserview_choose_application">Valitse sovellus</string>
   <string name="abc_capital_off">POIS KÄYTÖSTÄ</string>
   <string name="abc_capital_on">KÄYTÖSSÄ</string>
-  <string name="abc_search_hint">Haku…</string>a
+  <string name="abc_search_hint">Haku…</string>
   <string name="abc_searchview_description_clear">Tyhjennä kysely</string>
   <string name="abc_searchview_description_query">Hakulauseke</string>
   <string name="abc_searchview_description_search">Haku</string>
